src/app/components/users/user.component.scss
.user-container {
  display: flex;
  align-items: center;

  ion-chip {
    white-space: nowrap;

    ion-label {
      overflow-x: clip;
      max-width: 180px;
      text-overflow: ellipsis;
    }

    &.avatar-only {
      max-width: 33px;
      padding: 4px;

      ion-avatar {
        margin: 0;
      }
    }

    &.you {
      &.ion-color-primary {
        background: var(--ion-color-primary);
        color: #fff;
      }
      &.ion-color-danger {
        background: var(--ion-color-danger);
        color: #fff;
      }
    }
  }

  app-actions-popover {
    opacity: 0;
    transition: 300ms;
  }

  &:hover app-actions-popover {
    opacity: 1;
  }
}

